# acinator

./: Btree.cpp  Btree.h  CMakeLists.txt  README.md  acinator.cpp  oneggin.cpp
includes/: Btree.h  list.h
sources/: Btree.cpp  acinator.cpp  list.cpp  stack.cpp
